<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context="bd.city.utility.management.LoginActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/tv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_username"
            android:textSize="20sp"
            android:layout_marginRight="10dp"/>
        <EditText
            android:id="@+id/et_user"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:ems="20"
            android:inputType="textPersonName"
            android:hint="@string/login_etUser" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/tv_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_password"
            android:textSize="20sp"
            android:layout_marginRight="10dp"/>
        <EditText
            android:id="@+id/et_pass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:ems="20"
            android:inputType="textPassword"
            android:hint="@string/login_etPass" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_newUser"
        android:textColor="#aa0a0a"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginBottom="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_login"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/login_btLogin"
            android:textSize="18sp"
            android:layout_marginEnd="15dp"
            android:textAllCaps="false"
            android:onClick="gotoServiceDetails"/>

        <Button
            android:id="@+id/bt_register"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/login_btRegis"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:onClick="gotoRegistration"/>

    </LinearLayout>


</LinearLayout>